@startuml

title __ORDERED_BINARY_DECISION_DIAGRAM's Class Diagram__\n

  namespace  {
    namespace rdered_binary_decision_diagram {
      class ordered_binary_decision_diagram.Node {
          - incomingEdge : Boolean
          - terminalNodeParentList : List<Node>
          - value : Object
          + addParentToTerminalNode()
          + cloner()
          + equals()
          + getChildNode()
          + getIncomingEdge()
          + getLeftChildNode()
          + getParentNode()
          + getRightChildNode()
          + getTerminalNodeParentList()
          + getValue()
          + isRoot()
          + isTNode()
          + removeParentOfTerminalNode()
          + setIncomingEdge()
          + setLeftChildNode()
          + setParentNode()
          + setRightChildNode()
          + setTerminalNodeParentList()
          + setValue()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace rdered_binary_decision_diagram {
      class ordered_binary_decision_diagram.OrderedBinaryDecisionDiagram {
          - lastBoolean : boolean
          - name : String
          - nodesSequence : List<Node>
          - terminalNodes : List<Node>
          - theLowestNonterminalNodes : List<Node>
          + OrderedBinaryDecisionDiagram()
          + addTerminalNode()
          + deleteTerminalNode()
          + deleteTerminalNode()
          + fill_NTNList()
          + fill_TNLists()
          + getCurrent()
          + getName()
          + getNodesSequence()
          + getRoot()
          + getTerminalNodes()
          + getTheLowestNonterminalNodes()
          + insertNode()
          + insertNodes()
          + isLastBoolean()
          + makeACopy()
          + reduceTerminalNodes()
          + setCurrent()
          + setLastBoolean()
          + setName()
          + setNodesSequence()
          + setRoot()
          + setTerminalNodes()
          + setTheLowestNonterminalNodes()
          + toString()
          - copy()
          - height()
          - lowestNonterminalNodes()
          - printGivenLevel()
          - printLevelOrder()
          - terminalNodes()
      }
    }
  }
  

  ordered_binary_decision_diagram.Node o-- ordered_binary_decision_diagram.Node : leftChildNode
  ordered_binary_decision_diagram.Node o-- ordered_binary_decision_diagram.Node : parentNode
  ordered_binary_decision_diagram.Node o-- ordered_binary_decision_diagram.Node : rightChildNode
  ordered_binary_decision_diagram.OrderedBinaryDecisionDiagram o-- ordered_binary_decision_diagram.Node : current
  ordered_binary_decision_diagram.OrderedBinaryDecisionDiagram o-- ordered_binary_decision_diagram.Node : root


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
